2000-06-09  Brent Welch <welch@scriptics.com>

	* Released 3.0.3 - added top-level Makefile for building
	the bundled distribution.

2000-05-31  Brent Welch <welch@scriptics.com>

	* lib/doc.tcl: Fixed file join bugs with extra leading '/' in
	the URL suffix. This bug caused a SECURITY_BUG if you used
	Doc_AddRoot to add file systems into your URL tree.
	(If you have just a single root defined by Doc_Root there is
	no security problem in 3.0.2)

2000-05-30  Dan Kuchler <kuchler@scriptics.com>

        * lib/mtype.tcl: Changed the file extension array to use case
        insensitive file extension to mime type mapping.  This makes
        .GIF and .gif the same and .HTM and .htm identical.

2000-05-17  Brent Welch <welch@scriptics.com>

	* Released 3.0.2

	* lib/url.tcl: SECURITY FIX.  3.0.0 and 3.0.1 can leak files simply
	by specifying an extra leading /, eg., http://localhost:8015//etc/passwd
	will happily fetch the password file.  This bug is not present in
	the 2.* or earlier versions of TclHttpd.  Thanks to Petrus Vloet for
	finding this one.
	* lib/version.tcl, various Makefiles and Configures. Changed to 3.0.2
	* Applied rel-3-0-2 CVS tag.

2000-05-13  Brent Welch <welch@scriptics.com>

	* lib/include.tcl: Changed Html_ExtractParam to html::extractParam so the
	server-side examples work.
	* htdocs/*: Various clean up of the sample URL tree for the 3.0.1 release.

2000-05-12  Brent Welch <welch@scriptics.com>

	* Various additions to installation documentation
	* Created 3.0.1 distribution

2000-05-10  Brent Welch <welch@scriptics.com>

	* bin/httpd.tcl: Moved development script library to
	the front of the auto_path.
	* lib/httpd.tcl: Made the SSL handhake non-blocking. BUG 5252.
	* lib/cgi.tcl: Changed exec of CGI script to use
		>2 /dev/stdout (if that device exists) instead of
		|& cat (to eliminate a process)
	* lib/doc.tcl: Fixed ~username accesses.
	* lib/mail.tcl: This now looks for /usr/lib/sendmail or