@@ -5,37 +5,37 @@ If you already have tcl 8.3 installed, then you can probably
 run the Tcl Web Server directly from this distribtuion without
 doing any installation steps:
 
-cd tclhttpd3.0.3/bin
+cd tclhttpd3.0.4/bin
 tclsh8.3 httpd.tcl -port 8001 -debug 1
 
 If you get complaints about missing the Standard Tcl Library,
 then you can install just that by running the install.sh script
 in the tcllib0.5 directory.
 
-If you want a clean install of everything, including a Tcl 8.3.1
+If you want a clean install of everything, including a Tcl 8.3.2
 that has thread enabled, then use the Makefile in the top-level directory.
 This will compile things under the build directory, segregating
 by platform into different subdirectories.
 
 More Docs
 There are a few more README-like files you should read:
-tclhttpd3.0.3/README
-tclhttpd3.0.3/WHATSNEW
-tclhttpd3.0.3/ChangeLog
-tclhttpd3.0.3/certs/README.ssl
+tclhttpd3.0.4/README
+tclhttpd3.0.4/WHATSNEW
+tclhttpd3.0.4/ChangeLog
+tclhttpd3.0.4/certs/README.ssl
 
 Information about TclHttpd is at
 
-http://dev.scriptics.com/software/tclhttpd
+http://dev.ajubasolutions.com/software/tclhttpd
 
 The mailing list is
-mailto:tcl-httpd@scriptics.com
+mailto:tcl-httpd@ajubasolutions.com
 You must be a member to post to this list.  To join, send a message
 with the subject of "subscribe" to
-tcl-httpd-request@scriptics.com
+tcl-httpd-request@ajubasolutions.com
 
 There are archives of the list at
-http://dev.scriptics.com/lists/tcl-httpd
+http://dev.ajubasolutions.com/lists/tcl-httpd
 
 Brent Welch <welch@ajubasolutions.com>	(our new identity)
 	or  <welch@scriptics.com>	(our original company name)
@@ -48,4 +48,4 @@ some bugs.  These have been mostly fixed, but we anticipate additional
 work.  To get a stable SSL you should use either Tcl 8.3.2 (if that
 exists) or get the "core-8-3-1-branch" branch of the Tcl CVS repository
 which will become the 8.3.2 release.  You also need the latest TLS
-from our CVS repository.
+from our CVS repository, which will become TLS 1.4.
