@@ -25,13 +25,13 @@ PACKAGE=tclhttpd
 
 MAJOR_VERSION=3
 MINOR_VERSION=0
-PATCHLEVEL=".3"
+PATCHLEVEL=".4"
 
 VERSION=${MAJOR_VERSION}.${MINOR_VERSION}${PATCHLEVEL}
 NODOT_VERSION=${MAJOR_VERSION}${MINOR_VERSION}
 WIN_VERSION=`echo ${VERSION} | sed -e 's/\.//g'`
 
-TCL_VERSION=8.3.1
+TCL_VERSION=8.3.2
 TCLLIB_VERSION=0.4
 THREAD_VERSION=2.0
 
